# FastAPI-Template

./: .gitignore  README.md  pyproject.toml
fastapi_todolist/: app.py
fastapi_todolist/schemas/: user_schema.py
tests/: test_app.py
